ags (2.1.24)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* TODO:JK: improved AgsRecallContainer detection of ags_recall_factory.c
	* improved apply min/max audio channels and pads to instruments
	* improved AgsResizeEditor to respect min/max channel alignment
	* improved AgsResizeAudio task to resize audio channels prior to pads
	* fixed missing initial loop position of instruments
	* TODO:JK: fixed ags-buffer creation in ags_recall_factory.c

ags (2.1.23)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing initial loop of notation as adding AgsDssiBridge and AgsLiveDssiBridge
	* fixed missing initial loop of notation as adding AgsLv2Bridge and AgsLiveLv2Bridge
	* fixed ags_recycling_create_audio_signal_with_frame_count()

ags (2.1.22)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* minor improvements and 2nd attempt of targeting compiler warnings

ags (2.1.21)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved ags_start_audio_test.c and ags_start_channel_test.c

ags (2.1.20)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* minor improvements and targeting compiler warnings
	* increased pulseaudio default buffer size
	* disabled pulseaudio empty buffer compensation on underflow
	* fixed potential dead-lock in ags_recall_set_property()
	* fixed potential dead-lock in ags_recall_dssi_run_set_property()
	* fixed potential dead-lock in ags_recall_lv2_run_set_property()
	* fixed potential dead-lock in ags_eq10_channel_get_property()

ags (2.1.19)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* minor improvements and targeting compiler warnings
	* added ags_start_audio_test.c
	* added ags_start_channel_test.c

ags (2.1.18)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved code of AgsSetBufferSize task
	* improved code of AgsSetSamplerate task
	* fixed AgsSeekSoundcard:offset set/get property
	* fixed AgsSetDevice:device set property