@@ -1,10 +1,12 @@
 ags (2.1.24)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
-	* TODO:JK: improved AgsRecallContainer detection of ags_recall_factory.c
+	* implemented AgsSeekable of ags-play-wave recall
+	* implemented AgsSeekable of ags-capture-wave recall
 	* improved apply min/max audio channels and pads to instruments
 	* improved AgsResizeEditor to respect min/max channel alignment
 	* improved AgsResizeAudio task to resize audio channels prior to pads
+	* TODO:JK: improved AgsRecallContainer detection of ags_recall_factory.c
 	* fixed missing initial loop position of instruments
 	* TODO:JK: fixed ags-buffer creation in ags_recall_factory.c
 
